Changed title to test CI/CD.

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="ie=edge" http-equiv="x-ua-compatible" />
-    <title>Metronome: The Built-to-Last Cryptocurrency</title>
+    <title>Metronome Token by Ted: The Built-to-Last Cryptocurrency</title>
     <link
       href="./dist/lib/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
